Разделены методы AddArticleForm и AddArticle

--- a/php02/siteofnews/.htaccess
+++ b/php02/siteofnews/.htaccess
@@ -4,7 +4,8 @@ RewriteBase /
 RewriteRule ^index.html$ /index.php
 
 RewriteRule ^articles/(.*)$ index.php?ctrl=News&act=One&id=$1
-RewriteRule ^add.php$ index.php?ctrl=Admin&act=AddArticle
+RewriteRule ^add.php/addArticle$ index.php?ctrl=Admin&act=AddArticle
+RewriteRule ^add.php$ index.php?ctrl=Admin&act=AddArticleForm
 
 ErrorDocument 401 /index.php
 ErrorDocument 403 /index.php
