--- a/php02/siteofnews/.htaccess
+++ b/php02/siteofnews/.htaccess
@@ -1,13 +1,10 @@
 RewriteEngine On
 Options +FollowSymlinks
 RewriteBase /
-RewriteRule ^index.html$ /index.php
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
 
-RewriteRule ^articles/(.*)$ index.php?ctrl=News&act=One&id=$1
-RewriteRule ^add.php/addArticle$ index.php?ctrl=Admin&act=AddArticle
-RewriteRule ^add.php$ index.php?ctrl=Admin&act=AddArticleForm
-RewriteRule ^errorLog.php$ index.php?ctrl=Admin&act=ErrLog
-
+RewriteRule ^(.*)$ index.php
 
 ErrorDocument 401 /index.php
 ErrorDocument 403 /index.php
